fix: map article spacing

--- a/style/index.css
+++ b/style/index.css
@@ -311,7 +311,7 @@ aside>img {
 
 article {
     width: 100%;
-    padding: 49px 10px;
+    padding: 48px 10px 76px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
